samples/_failures_safe/1761620053_785805_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f904c205.c: In function ‘main’:
./samples/SAFE/__tmp_f904c205.c:156:9: error: expected declaration or statement at end of input
  156 |         printf("Select operation: ");
      |         ^~~~~~
./samples/SAFE/__tmp_f904c205.c:156:9: error: expected declaration or statement at end of input
